--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -34,7 +34,7 @@
         Search
       </button>
     </div>&nbsp;
-  </div>&nbsp;
+  </div>
 
 
   <div class="row mt-3" style="text-align: center;">
