--- a/TimeSheet-Web/src/app/modules/user-profile/edit-user-profile-dialog/edit-user-profile-dialog.component.html
+++ b/TimeSheet-Web/src/app/modules/user-profile/edit-user-profile-dialog/edit-user-profile-dialog.component.html
@@ -55,23 +55,15 @@
             <input class="form-control" formControlName="position">
     
           </div>
-        </div>
-  
-        <div class="row mt-3">
-          <div class="col-2 mt-2" style="text-align: right;">
-            <mat-label> Site </mat-label>
-          </div>
-          <div class="col-4">
-            <input class="form-control" formControlName="site" disabled> 
-          </div>
-        </div>
+        </div>  
+
       <div mat-dialog-actions  class="mt-3" style="float: right;">
-        <button mat-raised-button class="btn-submit" type="submit">Save</button>    
-        <a mat-raised-button class="btn-cancle" (click)="canCle(false)">Cancle</a>     
+        <button mat-raised-button class="btn-submit" type="submit"><mat-icon>save_alt</mat-icon> Save </button>    
+        <a mat-raised-button class="btn-cancle" (click)="canCle(false)"><mat-icon>cancel</mat-icon> Cancle </a>     
       </div>    
     </form>
   </div>
-  <swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#ABEBC6"
+  <swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="rgb(163, 236, 114)"
   [showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
 </swal>
 <swal #saveSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="canCle(true)" [width]="480">
