--- a/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
+++ b/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
@@ -113,33 +113,14 @@
         </div>
       </div>
 
-      <div class="row mt-3">
-        <div class="col-2 mt-2" style="text-align: right;">
-          <mat-label> Site </mat-label>
-        </div>
-        <div class="col-4">
-          <input class="form-control" formControlName="site"
-          [ngClass]="{'is-invalid': submitted && f.site.errors}">
-          <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
-            <div *ngIf="f.site.errors.required" class="text-danger help-block">
-              {{'Site' | mandatoryfield}}
-            </div>
-          </div>
-          <div *ngIf="submitted && f.site.errors" class="invalid-feedback">
-            <div *ngIf="f.site.errors.whitespace" class="text-danger help-block">
-              {{'Site' | mandatoryfield}}
-            </div>
-          </div> 
-        </div>
-      </div>
     <div mat-dialog-actions  class="mt-3" style="float: right;">
-      <button mat-raised-button class="btn-submit" type="submit">Save</button>&nbsp;    
-      <a mat-raised-button type="submit" class="btn-submit" (click)="openDialogEdit(dataUser)">Edit</a>      
+      <button mat-raised-button class="btn-submit" type="submit"><mat-icon>save_alt</mat-icon> Save </button>&nbsp;    
+      <a mat-raised-button type="submit" class="btn-submit" (click)="openDialogEdit(dataUser)"><mat-icon>edit</mat-icon> Edit </a>      
     </div>    
   </form>
 </div>
 
-<swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="#ABEBC6"
+<swal #saveSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="rgb(163, 236, 114)"
 [showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onSave()">
 </swal>
 <swal #saveSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="getUser()" [width]="480">
