--- a/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
+++ b/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
@@ -9,7 +9,7 @@
   <div class="row" *ngIf="isSup" >
     <div class="col-12" style="text-align: right;">
       <button mat-raised-button class="btn-submit" (click)="openDialogAddUser(dataUserProject)">
-        <mat-icon>assessment</mat-icon>
+        <mat-icon>account_box</mat-icon>
         Add User Project
       </button>
     </div>
