Edit report and user-profile and list-staff

--- a/TimeSheet-Web/src/app/modules/report/report.component.html
+++ b/TimeSheet-Web/src/app/modules/report/report.component.html
@@ -11,7 +11,7 @@
         <mat-card style="cursor: pointer;">     
           <mat-card-title class="example-card2">Site Code: {{site.siteCode}}</mat-card-title>
           <mat-divider></mat-divider>    
-          <mat-card-header style="place-content: center;" (click)="goViewStaff()">
+          <mat-card-header style="place-content: center;" (click)="goViewStaff(site)">
             <mat-card-title class="example-card">{{site.site}}</mat-card-title>
           </mat-card-header>         
         </mat-card>
