--- a/TimeSheet-Web/src/app/modules/list-staff/list-staff.component.html
+++ b/TimeSheet-Web/src/app/modules/list-staff/list-staff.component.html
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="col-12">
-      <div> <a style="font-size: 1.75rem;">Staff List</a></div>
+      <div> <a style="font-size: 1.75rem;">List Staff</a></div>
     </div>
   </div>
 
