--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -71,6 +71,15 @@
           <td mat-cell *matCellDef="let element"> {{element.timeOut}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+          <td mat-cell *matCellDef="let element"> 
+            <button mat-button (click)="openDialogEdit(element)">
+              <mat-icon>edit</mat-icon>
+            </button>
+           </td>
+        </ng-container>
+
   
    
   
