--- a/TimeSheet-Web/src/app/modules/dashboard/dialog-assign/dialog-assign.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/dialog-assign/dialog-assign.component.html
@@ -65,19 +65,19 @@
     <div class="col-2 mt-2" style="text-align: right;">
       <mat-label> Date </mat-label>
     </div>
-    <div class="input-group" class="col-4">
-      <input formControlName="date" class="form-control" [matDatepicker]="pickerStart">
+    <div class="input-group" class="col-4" id='datetimepicker1'>
+      <input type="text" formControlName="date" class="form-control" [matDatepicker]="pickerStart">
       <div class="input-group-append">
         <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
         <mat-datepicker #pickerStart></mat-datepicker>
       </div>
     </div>
-    <div class="col-2 mt-2" style="text-align: right;">
+    <!-- <div class="col-2 mt-2" style="text-align: right;">
       <mat-label> User Code Supervisor </mat-label>
     </div>
     <div class="col-4">
       <input class="form-control" formControlName="userCodeSupervisor" disabled>
-    </div>
+    </div> -->
   </div>
 
   <div mat-dialog-actions class="mt-3" style="float: right;">
