--- a/TimeSheet-Web/src/app/modules/dashboard/edit-project-dialog/edit-project-dialog.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/edit-project-dialog/edit-project-dialog.component.html
@@ -50,14 +50,14 @@
       </div>
     </div>
   
-    <div class="row mt-3">
+    <!-- <div class="row mt-3">
       <div class="col-2 mt-2" style="text-align: right;">
         <mat-label> User Code Supervisor </mat-label>
       </div>
       <div class="col-4">
         <input class="form-control" formControlName="userCodeSupervisor" disabled>
       </div>
-    </div>
+    </div> -->
   
     <div mat-dialog-actions class="mt-3" style="float: right;">
       <button mat-raised-button type="submit" class="btn-submit"><mat-icon>save_alt</mat-icon> Save </button>
