--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -1,5 +1,11 @@
 <div class="page-main">
-
+  <ngx-spinner 
+  bdColor = "rgba(0, 0, 0, 0.8)" 
+  size = "medium" color = "#fff" 
+  type = "timer" 
+  [fullScreen] = "true"><p 
+  style="color: white" > Loading... </p>
+</ngx-spinner>
   <div class="row">
     <div class="col-12">
       <div> <a style="font-size: 1.75rem;">Attendance List</a></div>
@@ -43,49 +49,49 @@
 
         <ng-container matColumnDef="date">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.date | date: 'yyyy/MM/dd'}} </td>
+          <td mat-cell *matCellDef="let element">{{element.date | date: 'yyyy/MM/dd'}}</td>
         </ng-container>
 
         <ng-container matColumnDef="project">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.project.projectName}} </td>
+          <td mat-cell *matCellDef="let element">{{element.project.projectName}}</td>
         </ng-container>
 
         <ng-container matColumnDef="site">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Site </th>
-          <td mat-cell *matCellDef="let element"> {{element.site.site}} </td>
+          <td mat-cell *matCellDef="let element">{{element.site.site}}</td>
         </ng-container>
 
         <ng-container matColumnDef="task">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Task </th>
-          <td mat-cell *matCellDef="let element"> {{element.task}} </td>
+          <th mat-header-cell *matHeaderCellDef> Task </th>
+          <td mat-cell *matCellDef="let element">{{element.task}}</td>
         </ng-container>
 
         <ng-container matColumnDef="timeIn">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Time-In </th>
-          <td mat-cell *matCellDef="let element"> {{element.timeIn}} </td>
+          <td mat-cell *matCellDef="let element">{{element.timeIn}}</td>
         </ng-container>
 
         <ng-container matColumnDef="timeOut">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Time-Out </th>
-          <td mat-cell *matCellDef="let element"> {{element.timeOut}} </td>
+          <td mat-cell *matCellDef="let element">{{element.timeOut}}</td>
         </ng-container>
 
         <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+          <th mat-header-cell *matHeaderCellDef> Action </th>
           <td mat-cell *matCellDef="let element"> 
             <button mat-button (click)="openDialogEdit(element)">
               <mat-icon>edit</mat-icon>
             </button>
            </td>
-        </ng-container>
-
-  
-   
+        </ng-container>   
   
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>     
+              
+        </table>    
+        <div *ngIf="dataSource.data.length === 0"><br>No records found.</div>     
         <mat-paginator [pageSizeOptions]="[10,20,100]" [pageSize]="10"></mat-paginator>
       </div>
+      
     </div>
