--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.scss
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.scss
@@ -5,7 +5,7 @@ table {
   
   .mat-cell{
     width: 5;
-    text-align: center;
+    text-align: center !important;
     font-size: 16px;
     color: black;  
     
@@ -19,13 +19,11 @@ table {
     color: black;
   }
 
-  .textcent{
-    text-align: center;
-  }
-  
+
 th{
   background-color: #ced2d6;
 }
+
 tr:nth-child(even) {background-color: #f2f2f2;}
 
 
