--- a/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
+++ b/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
@@ -31,7 +31,7 @@
         </ng-container>
 
         <ng-container matColumnDef="task">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Task </th>
+          <th mat-header-cell *matHeaderCellDef> Task </th>
           <td mat-cell *matCellDef="let element"> {{element.task}} </td>
         </ng-container>
 
@@ -42,7 +42,8 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
+      </table><br>
+      <div *ngIf="dataSource.data.length === 0"><br>No records found.</div> 
       <mat-paginator [pageSizeOptions]="[10,20,100]" [pageSize]="10"></mat-paginator>
     </div>
   </div>
