--- a/TimeSheet-Web/src/app/modules/list-staff/list-staff.component.html
+++ b/TimeSheet-Web/src/app/modules/list-staff/list-staff.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="row mt-3">
-    <div class="col-sm-12 col-md-12">
+    <div class="col-sm-12 col-md-12" style="text-align: center;">
       <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
         <ng-container matColumnDef="userCode">
@@ -38,6 +38,7 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
+      <div *ngIf="dataSource.data.length === 0"><br>No records found.</div>  
       <mat-paginator [pageSizeOptions]="[10,20,100]" [pageSize]="10"></mat-paginator>
     </div>
   </div>
