--- a/TimeSheet-Web/src/app/modules/attendance/add-attendance-dialog/add-attendance-dialog.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/add-attendance-dialog/add-attendance-dialog.component.html
@@ -114,24 +114,18 @@
       <mat-label> Date </mat-label>
     </div>
     <div class="input-group" class="col-4">
-      <input formControlName="date" class="form-control" [matDatepicker]="pickerStart">
-      <div class="input-group-append">
-        <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
-        <mat-datepicker #pickerStart></mat-datepicker>
-      </div>
+      <input type="text" formControlName="date" placeholder="Datepicker" class="form-control" placement="top"
+        bsDatepicker [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" readonly>
     </div>
-
-    <!-- <div class="col-2 mt-2" style="text-align: right;">
-      <mat-label> User Code </mat-label>
-    </div>
-    <div class="col-4">
-      <input class="form-control" formControlName="userCode" disabled>
-    </div> -->
   </div>
 
   <div mat-dialog-actions class="mt-3" style="float: right;">
-    <button mat-raised-button type="submit" class="btn-submit"><mat-icon>save_alt</mat-icon> Save</button>
-    <a mat-raised-button class="btn-cancle" (click)="canCle(false)"><mat-icon>cancel</mat-icon> Cancel</a>
+    <button mat-raised-button type="submit" class="btn-submit">
+      <mat-icon>save_alt</mat-icon> Save
+    </button>
+    <a mat-raised-button class="btn-cancle" (click)="canCle(false)">
+      <mat-icon>cancel</mat-icon> Cancel
+    </a>
   </div>
 </form>
 
