--- a/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
@@ -61,5 +61,5 @@
 <swal #deleteSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="rgb(163, 236, 114)"
   [showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onDelete()">
 </swal>
-<swal #deletedSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="inquirySup()" [width]="480">
+<swal #deletedSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="deletedSucess()" [width]="480">
 </swal>
