--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -1,11 +1,7 @@
 <div class="page-main">
-  <ngx-spinner 
-  bdColor = "rgba(0, 0, 0, 0.8)" 
-  size = "medium" color = "#fff" 
-  type = "timer" 
-  [fullScreen] = "true"><p 
-  style="color: white" > Loading... </p>
-</ngx-spinner>
+  <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="timer" [fullScreen]="true">
+    <p style="color: white"> Loading... </p>
+  </ngx-spinner>
   <div class="row">
     <div class="col-12">
       <div> <a style="font-size: 1.75rem;">Attendance List</a></div>
@@ -79,19 +75,28 @@
 
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef> Action </th>
-          <td mat-cell *matCellDef="let element"> 
+          <td mat-cell *matCellDef="let element">
             <button mat-button (click)="openDialogEdit(element)">
               <mat-icon>edit</mat-icon>
             </button>
-           </td>
-        </ng-container>   
-  
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>     
-              
-        </table>    
-        <div *ngIf="dataSource.data.length === 0"><br>No records found.</div>     
-        <mat-paginator [pageSizeOptions]="[10,20,100]" [pageSize]="10"></mat-paginator>
-      </div>
-      
+            <button mat-button (click)="onDeleteSwal(element)">
+              <mat-icon>delete_forever</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      </table>
+      <div *ngIf="dataSource.data.length === 0"><br>No records found.</div>
+      <mat-paginator [pageSizeOptions]="[10,20,100]" [pageSize]="10"></mat-paginator>
     </div>
+
+  </div>
+
+  <swal #deleteSwal title="" icon="warning" [width]="480" confirmButtonText="Save" confirmButtonColor="rgb(163, 236, 114)"
+  [showCancelButton]="true" [allowOutsideClick]="false" (confirm)="onDelete()">
+</swal>
+<swal #deletedSucessSwal title="" icon="success" [allowOutsideClick]="false" (confirm)="deletedSucess()" [width]="480">
+</swal>
