--- a/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/attendance.component.html
@@ -14,7 +14,7 @@
         <mat-icon>library_books</mat-icon>
         Export
       </button>&nbsp;
-      <button mat-raised-button class="btn-submit" *ngIf="!isSup" (click)="openDialogAdd()">
+      <button mat-raised-button class="btn-submit" *ngIf="!isSup" (click)="openDialogAdd(dataSite,project)">
         <mat-icon>add_alarm</mat-icon>
         Add Attendance List
       </button><br>
@@ -31,7 +31,7 @@
         <mat-icon>search</mat-icon>
         Search
       </button>
-      <button mat-raised-button class="btn-submit" *ngIf="!isSup" (click)="getUser()">
+      <button mat-raised-button class="btn-submit" *ngIf="!isSup" (click)="inquiryAttendance()">
         <mat-icon>search</mat-icon>
         Search
       </button>
@@ -76,10 +76,10 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef> Action </th>
           <td mat-cell *matCellDef="let element">
-            <button mat-button (click)="openDialogEdit(element)">
+            <button *ngIf="!isSup" mat-button (click)="openDialogEdit(element)">
               <mat-icon>edit</mat-icon>
             </button>
-            <button mat-button (click)="onDeleteSwal(element)">
+            <button *ngIf="!isSup" mat-button (click)="onDeleteSwal(element)">
               <mat-icon>delete_forever</mat-icon>
             </button>
           </td>
