--- a/TimeSheet-Web/src/app/modules/login/login.component.scss
+++ b/TimeSheet-Web/src/app/modules/login/login.component.scss
@@ -1,3 +1,7 @@
+.message-error{
+  color: #f50404;
+}
+
 .page-login{
   background-color: rgb(163, 236, 114);
   // height: 100vh;
@@ -5,7 +9,6 @@
   height: 100%;
   position: fixed;
 }
-
 
 .img-login {
   width: 100%;
@@ -17,11 +20,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width: 50%;
+  max-width: 70%;
   background-color: rgba(255, 255, 255, 1);
   border: 7px solid white;
 }
-
 .mat-card{
   padding: unset !important;
 }
@@ -32,7 +34,7 @@
 }
 .btn-login{
   padding: 5%;
-  background-color: #0294da;
+  background-color: rgb(163, 236, 114);
 }
 .card-btn-login{
   place-self: center;
@@ -40,8 +42,4 @@
 
 .teb{
   border-right: 2px white
-}
-
-.message-error{
-  color: #f50404;
 }
