--- a/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
+++ b/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.html
@@ -1,14 +1,12 @@
 <div class="page-main">
-  <ngx-spinner 
-  bdColor = "rgba(0, 0, 0, 0.8)" 
-  size = "medium" color = "#fff" 
-  type = "timer" 
-  [fullScreen] = "true"><p 
-  style="color: white" > Loading... </p>
-</ngx-spinner>
+  <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="timer" [fullScreen]="true">
+    <p style="color: white"> Loading... </p>
+  </ngx-spinner>
   <div class="row">
-    <div class="col-12">
-      <div> <a style="font-size: 1.75rem;">DASHBOARD</a></div>
+    <div class="col-6" style="color: #737373;">
+      <mat-icon style="vertical-align: middle;">home</mat-icon>
+      <mat-icon style="vertical-align: middle;">chevron_right</mat-icon>
+      <span style="font-size: 1.2rem;"> DASHBOARD </span>
     </div>
   </div>
 
