--- a/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.scss
+++ b/TimeSheet-Web/src/app/modules/dashboard/dashboard.component.scss
@@ -10,6 +10,13 @@
   font-family: "CSChatThai", roboto;
 }
 
+.mat-card{
+  border-radius: 10px !important;
+}
+.mt-4, .my-4 {
+  margin-top: 0rem !important;
+}
+
 
 
 
