--- a/TimeSheet-Web/src/app/modules/report/report.component.html
+++ b/TimeSheet-Web/src/app/modules/report/report.component.html
@@ -8,8 +8,10 @@
 </ngx-spinner>
 
     <div class="row">
-      <div class="col-12">
-        <div> <a style="font-size: 1.75rem;">Report List</a></div>
+      <div class="col-6" style="color: #737373;">
+        <mat-icon style="vertical-align: middle;">home</mat-icon>
+        <mat-icon style="vertical-align: middle;">chevron_right</mat-icon>
+        <span style="font-size: 1.2rem;"> Report List </span>
       </div>
     </div>
 
