--- a/TimeSheet-Web/src/app/modules/report/report.component.scss
+++ b/TimeSheet-Web/src/app/modules/report/report.component.scss
@@ -1,28 +1,3 @@
-table {
-    width: 100%;
-    font-size: 16px;
-  }
-  
-  .mat-cell{
-    width: 5;
-    text-align: center;
-    font-size: 16px;
-    color: black;  
-    
-  } 
-
-  .mat-header-cell {
-    font-size: 16px !important;
-    text-align: center;
-    font-weight: bold;
-    justify-content: center;
-    color: black;
-  }
-
-th{
-  background-color: #ced2d6;
-}
-tr:nth-child(even) {background-color: #f2f2f2;}
 
 .example-card{
   color: rgb(163, 236, 114); 
@@ -37,8 +12,13 @@ tr:nth-child(even) {background-color: #f2f2f2;}
 }
 
 
+.mat-card{
+  border-radius: 10px !important;
+}
 
-
+.mt-4, .my-4 {
+  margin-top: 0rem !important;
+}
 
 
 
