--- a/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
+++ b/TimeSheet-Web/src/app/modules/user-profile/user-profile.component.html
@@ -2,9 +2,12 @@
   <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="timer" [fullScreen]="true">
     <p style="color: white"> Loading... </p>
   </ngx-spinner>
-
-  <div class="col-12">
-    <div> <a style="font-size: 1.75rem;">User Profile</a></div>
+  <div class="row">
+    <div class="col-6" style="color: #737373;">
+      <mat-icon style="vertical-align: middle;">home</mat-icon>
+      <mat-icon style="vertical-align: middle;">chevron_right</mat-icon>
+      <span style="font-size: 1.2rem;"> User Profile </span>
+    </div>
   </div>
   <form [formGroup]="createProfile">
 
@@ -113,7 +116,7 @@
 
     <div mat-dialog-actions class="mt-3" style="float: right;">
       <a mat-raised-button type="submit" class="btn-submit" (click)="openDialogEdit(dataUser)">
-        <mat-icon>edit</mat-icon> Edit
+        <mat-icon class="card-button">edit</mat-icon> Edit
       </a>
     </div>
   </form>
