--- a/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
+++ b/TimeSheet-Web/src/app/modules/user-project/user-project.component.html
@@ -1,8 +1,10 @@
 <div class="page-main">
 
   <div class="row">
-    <div class="col-6">
-      <div> <a style="font-size: 1.75rem;">User Project</a></div>
+    <div class="col-6" style="color: #737373;">
+      <mat-icon style="vertical-align: middle;">home</mat-icon>
+      <mat-icon style="vertical-align: middle;">chevron_right</mat-icon>
+      <span style="font-size: 1.2rem;"> User Project </span>
     </div>
   </div><br>
 
