Edit loading edit-attendance-dialog

--- a/TimeSheet-Web/src/app/modules/attendance/edit-attendance-dialog/edit-attendance-dialog.component.html
+++ b/TimeSheet-Web/src/app/modules/attendance/edit-attendance-dialog/edit-attendance-dialog.component.html
@@ -6,7 +6,7 @@
 
   <div class="row mt-3">
     <div class="col-2 mt-2" style="text-align: right;">
-      <mat-label>Project Code</mat-label>
+      <mat-label>Project Name</mat-label>
     </div>
     <div class="col-4">
       <mat-select class="form-control" formControlName="projectCode" name="projectCode">
@@ -16,7 +16,7 @@
       </mat-select>
     </div>
     <div class="col-2 mt-2" style="text-align: right;">
-      <mat-label> SiteCode </mat-label>
+      <mat-label> Site </mat-label>
     </div>
     <div class="col-4">
       <mat-select class="form-control" formControlName="siteCode" name="siteCode">
