--- a/TimeSheet-Web/src/app/modules/report/report.component.html
+++ b/TimeSheet-Web/src/app/modules/report/report.component.html
@@ -17,7 +17,7 @@
 
     <div class="row">
       <div class="col-3 mt-3" *ngFor="let site of dataSite">
-        <mat-card style="cursor: pointer;">     
+        <mat-card style="cursor: pointer;" appMaterialElevation>     
           <mat-card-title class="example-card2">Site Code: {{site.siteCode}}</mat-card-title>
           <mat-divider></mat-divider>    
           <mat-card-header style="place-content: center;" (click)="goViewStaff(site)">
